[project]
name = "jflux"
version = "0.1.0"
description = "Inference codebase for Flux in Jax"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
dependencies = [
    "einops>=0.8.0",
    "fire>=0.6.0",
    "flax>=0.9.0",
    "jflux",
    # FIXME: Allow for local installation without GPUs as well `jax[cuda12]`
    "jax>=0.4.31",
    "mypy>=1.11.2",
    "pillow>=10.4.0",
    "ruff>=0.6.3",
    "transformers>=4.44.2",
]

[project.scripts]
jflux = "jflux.cli:app"

[tool.uv]
dev-dependencies = [
    "flux",
    "pytest>=8.3.3",
]

[tool.uv.sources]
jflux = { workspace = true }
flux = { git = "https://github.com/black-forest-labs/flux.git" }

[tool.ruff.lint]
select = ["I001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
disable_error_code = "no-redef"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
