[project]
name = "jflux"
version = "0.1.0"
description = "Inference codebase for Flux in Jax"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
dependencies = [
    "flax>=0.9.0",
    "jax[cuda]>=0.4.34",
]

[project.scripts]
jflux = "jflux.cli:app"

[tool.uv]
package = true
dev-dependencies = [
    "flux",
    "pytest>=8.3.3",
]

[tool.uv.sources]
jflux = { workspace = true }
flux = { git = "https://github.com/black-forest-labs/flux.git" }

[tool.ruff.lint]
select = ["E", "F", "I001", "W"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
disable_error_code = "no-redef"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
